# routesentry-next

./: .gitignore  AGENTS.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: github-action.yml
src/routesentry_next/: analyzer.py  auth_detector.py  cli.py  middleware_parser.py  models.py  route_mapper.py  scoring.py
src/routesentry_next/reporters/: console.py  json_report.py  markdown.py  sarif.py
tests/: test_action_metadata.py  test_analyzer.py  test_auth_detector.py  test_cli.py  test_middleware_parser.py  test_reports.py  test_route_mapper.py
tests/fixtures/broad_middleware_app/: middleware.ts
tests/fixtures/cookie_auth_patterns_app/app/api/admin/users/: route.ts
tests/fixtures/cors_authorization_header_app/app/api/profile/: route.ts
tests/fixtures/imported_auth_wrapper_app/app/api/admin/users/: route.ts
tests/fixtures/matcher_miss_app/: middleware.ts
tests/fixtures/middleware_only_app/: middleware.ts
tests/fixtures/missing_api_coverage_app/app/: page.tsx
tests/fixtures/mutation_without_auth_app/app/api/profile/: route.ts
tests/fixtures/pages_api_method_app/pages/api/: account.ts
tests/fixtures/pages_api_res_status_auth_app/pages/api/: account.ts
tests/fixtures/safe_public_app/app/: page.tsx
tests/fixtures/src_layout_app/src/app/_components/: page.tsx
tests/fixtures/src_layout_app/src/pages/: settings.tsx
tests/fixtures/src_layout_app/src/pages/api/: account.ts
tests/fixtures/src_middleware_app/: package.json
tests/fixtures/src_middleware_app/src/: middleware.ts
(+7 files in other folders)
