[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "routesentry-next"
version = "0.1.0"
description = "Static authorization-boundary triage for Next.js routes."
requires-python = ">=3.11"
dependencies = ["typer>=0.12", "rich>=13"]

[project.scripts]
routesentry = "routesentry_next.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

